gitops/apps/service1/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
